--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
 
 
 <!-- Button trigger modal -->
-<button type="button" id="open-modal" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+<button type="button" id="open-modal" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#newton-modal">
   Launch newton modal
 </button>
 
