--- a/main.html
+++ b/main.html
@@ -17,13 +17,13 @@
 
 <!-- Modal -->
 <div class="modal fade" id="newton-modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-dailog-centered">
-    <div class="modal-content">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content ">
       <div class="modal-header">
         <h5 class="modal-title" id="exampleModalLabel">New Modal</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
-      <div class="modal-body">
+      <div class="modal-body ">
         <p>
 Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum minus sit consectetur facere? Consequatur velit quos excepturi iusto sint vero exercitationem labore consectetur voluptates temporibus, iure nisi, porro quo doloribus repellendus voluptatem sed! Repellendus harum repellat saepe quas eos eligendi?</p>
       </div>
